# traildb-haskell

./: .gitignore  .travis.yml  LICENSE  README.md  traildb.cabal
System/: TrailDB.hs
System/TrailDB/: Error.hs  Internal.hs
bench-traildb/: Main.hs
cbits/: shim.c
examples/: tutorial_simple_traildb.hs
wikipedia-benchmark/: Main.hs
